# book-buddy

./: .gitignore  README.md  langgraph.json  main.py  pyproject.toml
src/api/: book_service.py  client.py
src/core/: book.py
src/graph/: graph_builder.py  prompts.py  schemas.py
src/graph/tools/: book_utils.py  enrich_and_score.py  query_to_read_list.py  recommend_by_profile.py  save_to_read_list.py
src/jkickl_ae_cap_1_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/security/: prompt_injection.py
src/ui/: app.py  components.py
src/utils/: logging.py  streaming.py
src/vectorstore/: chroma.py  ingest.py  state.py  to_read_list.py
tests/: conftest.py
tests/integration/: queries.yaml
tests/test_api/: test_book_service.py  test_client.py
tests/test_core/: test_book.py
tests/test_graph/: test_schemas.py
tests/test_graph/test_tools/: test_book_utils.py  test_enrich_and_score.py  test_get_last_tool_result.py  test_recommend_by_profile.py
tests/test_vectorstore/: test_chroma.py  test_ingest.py  test_state.py
