[project]
name = "jkickl-ae-cap-1-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=1.2.9",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.8",
    "chromadb>=0.5.5",
    "requests>=2.32.3",
    "streamlit>=1.37.1",
    "pytest>=8.3.2",
    "langchain-chroma>=0.1.0",
    "rapidfuzz>=3.14.3",
    "pandas>=2.2.2",
    "langsmith>=0.6.9",
    "langgraph-cli[inmem]>=0.4.12",
    "loguru>=0.7.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
